Change Log for OpenXava project
===============================

- Added new database commented configurations in new projects: MS SQL Server, Informix, Db2 and Firebird.
- Addons and OpenXava projects mixed in an unique project, openxava. 
- Code for navigation and security refactored to be more plugable. 
- Driver class not included for datasource and persistence unit definitions for new projects.
- Fix: Some links to incorrect lessons in top navigation menu of course.
- All EJB related code removed.
- MapFacade and EntityBean are no longer EJB Session beans. 
- IRemoteAction interface and Server utility class removed.
- Fix: Some code in lesson 2 and 6 of course does not compile. 
- Fix: Some incorrect explanation sentences in text of course.
- New getAsStreamInPrefixes() method in Resources utility class.
- Fix: Message for template not found on generating custom PDF is not translated. 
- Maven support.
- Searching in a @DescriptionsList does not ignore accents in some cases.
- Removed DocumentLibrary editor for attaching documents using Liferay document library.
- Lessons 9, 10, 11, 12, 13, 14, 15 and 16 of course include video.
- Lesson 9 of course divided into several smaller lessons.

OpenXava 6.6.3 (2022-3-29)
--------------------------
- Reference documentation about @DescriptionsList improved with examples using composite keys.
- Lessons 5, 6, 7 and 8 of course include video.
- Fix: Narrowing a view with @Coordiantes too much leaves the map outside the property frame. 
- Fix: Two groups displayed in the same row do not fill all the space available leaving blank space on right.
- Fix: When two collections are placed side by side they are not aligned on right with other frames in view.
- Fix: Sum in collection used by @Calculation properties not shown if removed in previous versions by user.
- Fix: @DescriptionsList dependent on @DescriptionsList with composite key with a single ? in condition fails.