@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Configuration for Firebird - OpenXava</title>
+    <title>Configuration for Firebird in OpenXava 6 - OpenXava</title>
     <link rel="stylesheet" href="static/style.css" type="text/css">
     <link rel="stylesheet" href="highlight/highlight.css">
     <script src="highlight/highlight.js"></script>
@@ -11,10 +11,13 @@
     <div class="wiki" style="display: block;">
       <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
               <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
-          / </span> Configuration for Firebird </h1>
-      Configuring your OpenXava application to go against Firebird is very
-      simple, basically you have to install the JDBC driver for Firebird and
-      define correctly the datasource. You don't need to touch any code of your
+          / </span> Configuration for Firebird in OpenXava 6</h1>
+      <i>If you're using OpenXava 7.0 or newer look at the <a href="firebird_en.html">new
+          instructions</a></i></div>
+    <div class="wiki" style="display: block;"> Configuring your OpenXava 6.x (or
+      older) application to go against Firebird is very simple,
+      basically you have to install the JDBC driver for Firebird and define
+      correctly the datasource. You don't need to touch any code of your
       application.</div>
     <div class="wiki" style="display: block;">We assume you have already
       installed and running Firebird.<br>
@@ -43,7 +46,7 @@
       </h2>
       In the project you're going to use Firebird you have to add the variable
       declared above. Click with right mouse button on your project and then
-      choose <i>Java Build Path &gt; Configure Build Path...</i>:<img src="files/project-build-path-eclipse-menu_en.png"
+      choose <i>Java Build Path &gt; Configure Build Path...</i>:<img src="files/project-build-path-eclipse-menu_en.png"
         alt="project-build-path-eclipse-menu_en.png" title="project-build-path-eclipse-menu_en.png">
       <div class="wiki" style="display: block;">Then select the <i>Libraries</i>
         tab:</div>
@@ -54,7 +57,7 @@
     <div class="wiki" style="display: block;">
       <h2>Add the JDBC driver to the production Tomcat</h2>
       <h2><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">Adding
-          the driver in production is much easier. Copy <i>jaybird-full-3.0.6.jar</i></span><span
+          the driver in production is much easier. Copy <i>jaybird-full-3.0.6.jar</i></span><span
           style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
           to the <i>lib</i> folder of your Tomcat. Done.</span></h2>
     </div>
