@@ -1,0 +1,108 @@
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>Configuración para Firebird en OpenXava 6 - OpenXava</title>
+    <link rel="stylesheet" href="static/style.css" type="text/css">
+    <link rel="stylesheet" href="highlight/highlight.css">
+    <script src="highlight/highlight.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+  </head>
+  <body>
+    <div class="wiki" style="display: block;">
+      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
+              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_es.html">documentación</a>
+          / </span> Configuración para Firebird en OpenXava 6</h1>
+      <i>Si estás usando OpenXava 7.0 o superior mira <a href="firebird_es.html">las
+          instrucciones nuevas</a></i></div>
+    <div class="wiki" style="display: block;"> Configurar tu aplicación
+      OpenXava 6.x (o anterior) para ir contra Firebird es muy
+      simple, básicamente has de instalar tu controlador JDBC para Firebird y
+      definir correctamente la fuente de datos. No necesitas tocar nada de
+      código de tu aplicación.</div>
+    <div class="wiki" style="display: block;">Asumimos que ya tienes Firebird
+      instalado y funcionando.<br>
+      <h2 id="toc1">Descargar el controlador JDBC para Firebird</h2>
+      <p>Descarga el controlador para Firebird desde aquí: <a href="https://firebirdsql.org/en/jdbc-driver/">https://firebirdsql.org/en/jdbc-driver/</a></p>
+      Descargarás un archivo como este: <i>Jaybird-3.0.6-JDK_1.8.zip</i> (el
+      número de versión puede cambiar). Descomprímelo para buscar dentro un
+      archivo llamado <i>jaybird-full-3.0.6.jar</i> (o parecido), este último
+      archivo, el .jar, es el controlador JDBC que vamos a usar.</div>
+    <div class="wiki" style="display: block;">
+      <h2 id="toc1">Crear una variable de classpath en Eclipse<br>
+      </h2>
+      Para poder conectar a Firebird desde Eclipse vamos a declarar una variable
+      de classpath que apunte al controlador JDBC de Firebird, así lo podrás
+      usar en cualquier proyecto que lo necesites con facilidad. Para ello, en
+      Eclipse ve a <i>Window &gt; Preferences &gt; Java &gt; Build Path &gt;
+        Classpath Variables</i> donde puedes añadir la nueva variable:</div>
+    <img src="files/create-db-classpath-variable-eclipse_es.png" alt="" title="create-db-classpath-variable-eclipse_es.png">
+    <div class="wiki" style="display: block;">Puedes llamar a la variable
+      FIREBIRD_DRIVER o CONTROLADOR_FIREBIRD en lugar de DB_DRIVER si lo
+      prefieres. <i>Path</i> sería la ruta del controlador JDBC, en nuestro
+      caso la ruta del <i>jaybird-full-3.0.6.jar</i> que acabamos de descargar.<br>
+      <strong></strong></div>
+    <div class="wiki" style="display: block;">
+      <h2 id="toc1">Añadir la variable DB_DRIVER al proyecto Eclipse<br>
+      </h2>
+      En el proyecto en que vayas a usar Firebird has de añadir la variable que
+      acabas de declarar. Pulsa con el botón derecho del ratón en tu proyecto y
+      selecciona <i>Build Path &gt; Configure Build Path</i>:<img src="files/project-build-path-eclipse-menu_es.png"
+        alt="project-build-path-eclipse-menu_es.png" title="project-build-path-eclipse-menu_es.png">
+      <div class="wiki" style="display: block;">Después selecciona la pestaña <i>Libraries</i>:</div>
+    </div>
+    <img src="files/add-db-classpath-variable-to-your-eclipse-project_es.png" title="add-db-classpath-variable-to-your-eclipse-project_es.png">
+    <div class="wiki" style="display: block;">Con esto tenemos el controlador
+      disponible en el entorno de desarrollo.</div>
+    <div class="wiki" style="display: block;">
+      <h2>Añadir el controlador JDBC al Tomcat de producción</h2>
+      <h2><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">Añadir
+          el controlador en producción es mucho más fácil. Copia </span><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"><i>jaybird-full-3.0.6.jar</i>
+          a la carpeta <i>lib</i> de tu Tomcat. Nada más.</span></h2>
+    </div>
+    <div class="wiki" style="display: block;"> </div>
+    <div class="wiki" style="display: block;">
+      <h2 id="toc1">Ajustar la definición de la base de datos</h2>
+      Para desarrollo edita <i>web/META-INF/context.xml</i> de tu proyecto
+      Eclipse y para producción edita <i>conf/context.xml</i> de tu Tomcat,
+      para ajustar la fuente de datos para que apunte a Firebird, algo como
+      esto:</div>
+    <div class="wiki" style="display: block;">
+      <pre><code class="xml">&lt;Resource name="jdbc/MiAplicacionDS" auth="Container"
+	type="javax.sql.DataSource"
+	maxTotal="100" maxIdle="20" maxWaitMillis="10000"
+	username="root" password="ao49fmsk"
+	driverClassName="org.firebirdsql.jdbc.FBDriver"
+	url="jdbc:firebirdsql://localhost:3050/c:/db/miaplicacion.fdb"/&gt;
+</code></pre> </div>
+    <div class="wiki" style="display: block;">Las diferencias están en el <i>driverClassName</i>
+      y la <i>url</i>. La parte final de la <i>url</i>, <i>c:/db/miaplicacion.fdb</i>
+      en este ejemplo, es la ruta a tu base de datos Firebird. Obviamente, en
+      lugar de <i>localhost</i> deberías poner la dirección del servidor donde
+      está el Firebird, y también poner los valores correctos para <i>username</i>
+      y <i>password</i>.</div>
+    <div class="wiki" style="display: block;">
+      <h2 id="toc1">Actualizar persistence.xml</h2>
+      No necesitas tocar la unidad de persistencia <i>default</i> de <i>persistence.xml</i>
+      (en <i>persistence/META-INF</i>), a no ser que uses la propiedad <i>hibernate.dialect</i>
+      en cuyo caso lo más fácil es quitar la propiedad <i>hibernate.dialect</i>.
+      Sin embargo, sí que has de modificar la unidad de persistencia <i>junit</i>
+      para que apunte a Firebird:<br>
+      <div class="wiki" style="display: block;">
+        <pre><code class="xml">&lt;!-- JUnit Firebird --&gt;
+&lt;persistence-unit name="junit"&gt;
+	&lt;provider&gt;org.hibernate.jpa.HibernatePersistenceProvider&lt;/provider&gt;
+	&lt;class&gt;org.openxava.web.editors.DiscussionComment&lt;/class&gt;
+	&lt;properties&gt;
+		&lt;property name="hibernate.connection.driver_class" value="org.firebirdsql.jdbc.FBDriver"/&gt;
+		&lt;property name="hibernate.connection.username" value="root"/&gt;
+		&lt;property name="hibernate.connection.password" value="ao49fmsk"/&gt;		
+		&lt;property name="hibernate.connection.url" <br>			value="jdbc:firebirdsql://localhost:3050/c:/db/miaplicacion.fdb"/&gt;
+	&lt;/properties&gt;
+&lt;/persistence-unit&gt;
+</code></pre> </div>
+      <div class="wiki" style="display: block;">Adapta <i>username</i>, <i>password</i>
+        y <i>url</i> a la configuración de tu Firebird.<br>
+      </div>
+    </div>
+  </body>
+</html>
